Update Week 2 Knowledge.ipynb

--- a/Week 2 Knowledge.ipynb
+++ b/Week 2 Knowledge.ipynb
@@ -7,7 +7,7 @@
         "id": "3XE-GC7PvOBN"
       },
       "source": [
-        "# Pandas  tutorial for Level 4 Data Analysis\n",
+        "# Pandas  tutorial for Level 4 \n",
         "\n"
       ]
     },
