--- a/Week 2 Challenge 1 .ipynb
+++ b/Week 2 Challenge 1 .ipynb
@@ -353,8 +353,7 @@
         "# read csv file\n",
         "\n",
         "url='https://raw.githubusercontent.com/tdmhub/L4DA_resources/main/online_store_customer_data.csv'\n",
-        "df = df = pd.read_csv(url,delimiter=',')\n",
-        "df.head(3)"
+        "df = df = pd.read_csv(url,delimiter=',')\n"
       ]
     },
     {
@@ -544,8 +543,7 @@
       },
       "outputs": [],
       "source": [
-        "# Add a new payment_pounds column which value will convert dollar amount into pounds\n",
-        "df_col['payment_pounds'] ="
+        "# Add a new payment_pounds column which value will convert dollar amount into pounds\n"
       ]
     },
     {
@@ -593,6 +591,16 @@
       "id": "ttFH_6z1g-9Q"
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AgMX0Cev9hFj"
+      },
+      "id": "AgMX0Cev9hFj",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "44ff83e8",
       "metadata": {
@@ -621,7 +629,7 @@
         "id": "5CV_qntnTpja"
       },
       "source": [
-        "Question 12 : Delete all records that have a Nan in the referal column."
+        "Question 12 : Delete all records that have a Nan in the Gender column."
       ]
     },
     {
@@ -655,7 +663,7 @@
       },
       "outputs": [],
       "source": [
-        "# Impute Mean in all Nan values from Amount_Spent column\n",
+        "# Imput Mean in all Nan values from Amount_Spent column\n",
         "\n"
       ]
     }
