--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+fURdFwmczZ43vYL0CiNI",
+      "authorship_tag": "ABX9TyNsXkF4w/RaZlz+5EVFkSFb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -561,10 +561,160 @@
         "6)Support Vector Machine\n",
         "\n",
         "7)Neural Network\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "bLyRjXf6J0Kx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn import svm\n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix"
+      ],
+      "metadata": {
+        "id": "tqCutE25NCgn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The data was then divided into test and train datasets. We have 2 ways to divide our data, with the train_test_split option and cross_val_score. We will initially see the results from the test_train_split.\n",
+        "\n",
+        "Task 14 - Use the test_train_split to create training and testing data"
+      ],
+      "metadata": {
+        "id": "aKTP2Ak7NFgk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Complete Task 14"
+      ],
+      "metadata": {
+        "id": "5YH2-bOxNSQo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The classifiers are then set to their default settings and each classifier is trained and tested with the data.\n",
+        "\n",
+        "Task 15 - For each classifier,  fit the training data, test the model with accuracy_score and the confusion matrix and then save the results to the lists in the code."
+      ],
+      "metadata": {
+        "id": "pOY1rgApNZIP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifiers = [\n",
+        "    KNeighborsClassifier(100),\n",
+        "    GaussianNB(),\n",
+        "    ExtraTreesClassifier(100),\n",
+        "    svm.SVC(gamma='scale'),\n",
+        "    RandomForestClassifier(100),\n",
+        "    MLPClassifier(max_iter=200)\n",
+        "\n",
+        "    ]\n",
+        "\n",
+        "alo = []\n",
+        "min_max = []\n",
+        "standard_list = []\n",
+        "confusion_matrix_list = []\n",
+        "for clf in classifiers:\n",
+        "  name = clf.__class__.__name__\n",
+        "  alo.append(name)\n",
+        "  # Complete task 15"
+      ],
+      "metadata": {
+        "id": "I1Hvi4bgNbqI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This information is placed in a chart so we can compare the accuracy of each classifier."
+      ],
+      "metadata": {
+        "id": "vmx3j_15OKig"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(min_max)\n",
+        "max_val = max(min_max)\n",
+        "print(max_val)\n",
+        "labels = list(alo)\n",
+        "index = np.arange(1,len(alo)+1)\n",
+        "bar_width = 0.35\n",
+        "fig, ax = plt.subplots(figsize=(10,10))\n",
+        "red_counter = False\n",
+        "blue_counter = False\n",
+        "for i in range(0,len(index)):\n",
+        "    if max_val == min_max[i]:\n",
+        "        colour = \"Green\"\n",
+        "        label = \"Highest Acc Rating\"\n",
+        "        ax.bar(index[i] ,min_max[i],bar_width,color=colour , label = label)\n",
+        "    elif  min_max[i] > 0.8:\n",
+        "        colour = \"r\"\n",
+        "        label = \"Above 80% Acc Rating\"\n",
+        "        if red_counter == False:\n",
+        "            ax.bar(index[i] ,min_max[i],bar_width,color=colour , label = label)\n",
+        "            red_counter = True\n",
+        "        else:\n",
+        "            ax.bar(index[i] ,min_max[i],bar_width,color=colour)\n",
+        "\n",
+        "    else:\n",
+        "        label =\"Below 80% Acc Rating\"\n",
+        "        colour = \"b\"\n",
+        "        if blue_counter == False:\n",
+        "            ax.bar(index[i] ,min_max[i],bar_width,color=colour , label = label)\n",
+        "            blue_counter =True\n",
+        "        else:\n",
+        "            ax.bar(index[i] ,min_max[i],bar_width,color=colour)\n",
+        "\n",
+        "\n",
+        "ax.legend(bbox_to_anchor=(1.3, 0.5))\n",
+        "ax.spines[\"top\"].set_visible(False)\n",
+        "ax.spines[\"right\"].set_visible(False)\n",
+        "plt.xticks(range(1,len(labels)+1), labels)\n",
+        "for index,info in enumerate(ax.get_xticklabels()):\n",
+        "    info.set_rotation(90)\n",
+        "    ax.text(index+0.90,min_max[index]+0.02,\"{:.2f}\".format(min_max[index]))"
+      ],
+      "metadata": {
+        "id": "6azK-vDPOTQF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As we can see, apart from Naive Bayes, all the other machine learning algorithms are above 80% with the Random Forest and the Neural Network Classifier slightly edging it at >84 % accuracy. With so many algorithms having a similar accuracy rating, further investigation will be undertaken by looking at the confusion matrix. This will establish where the errors occurred."
+      ],
+      "metadata": {
+        "id": "6tfbMkIGORTk"
       }
     }
   ]
