--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsXkF4w/RaZlz+5EVFkSFb",
+      "authorship_tag": "ABX9TyMvceiGlkusjgzX1yI8bJnm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,29 +27,19 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jewti8ZkB5ee"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Introduction\n",
+        "**Introduction**\n",
         "\n",
-        "The adult dataset is from the 1994 Census database. Details of this dataset can be found at UCI Machine Learning Repository. My main aim is to create a simple GUI, so that users can input their own data and get a prediction of whether their income will exceed $50,000. The objectives that I will follow to complete my main aim are set out below :\n",
+        "The adult dataset is from the 1994 Census database. Details of this dataset can be found at the UCI Machine Learning Repository. My main aim is to create a simple GUI so that users can input their own data and get a prediction of whether their income will exceed $50,000. The objectives that I will follow to complete my main aim are set out below:\n",
         "\n",
-        "    Clean the data - Replace or delete missing data,\n",
-        "    Explore the data - delete any unnecessary fields and reduce the variance of individual features\n",
-        "    Normalise the data - convert the needed data for modelling\n",
-        "    Explore the machine learning algorithms\n",
-        "    Optimise the selected machine learning algorithm\n",
-        "    Create the GUI\n",
-        "\n"
+        "    Clean the data: Replace or delete missing data.\n",
+        "    Explore the data: Delete any unnecessary fields and reduce the variance of individual features.\n",
+        "    Normalise the data: Convert the needed data for modelling.\n",
+        "    Explore the machine learning algorithms.\n",
+        "    Optimise the selected machine learning algorithm.\n",
+        "    Create the GUI.\n"
       ],
       "metadata": {
         "id": "1tdoOXXvB7JQ"
@@ -58,7 +48,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Stage 1 : Exploratory data analysis (EDA)"
+        "**Stage 1: Exploratory Data Analysis (EDA)**"
       ],
       "metadata": {
         "id": "_h5BHf_PB_KM"
@@ -67,8 +57,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Task 1 - Present the code tells me all of the columns, datatypes and\n",
-        " records"
+        "Task 1 - Present the code that tells me all of the columns, data types, and records\n",
+        "\n",
+        "Importantly, you should begin considering whether the dimensionality of the dataset is high or low. Additionally, you should strive to understand the information described by all the columns."
       ],
       "metadata": {
         "id": "G9NtzH0MChSB"
@@ -78,10 +69,9 @@
       "cell_type": "code",
       "source": [
         "#Task 1 :\n",
-        "# You will need to import the correct libraries , read the csv file Salary.txt and make sure that columns have the following names\n",
+        "# You will need to import the correct libraries , read the csv file Salary.txt and make sure that the columns have the following names\n",
         "#names = [ \"age\" ,\"workclass\", \"fnlwgt\",\"education\",\"education-num\",\"marital-status\",\"occupation\",\n",
-        "#\"relationship\",\"race\",\"sex\",\"capital-gain\",\"capital-loss\",\"hours-per-week\",\"native-country\",\"label\"]\n",
-        "# You should complete task one."
+        "#\"relationship\",\"race\",\"sex\",\"capital-gain\",\"capital-loss\",\"hours-per-week\",\"native-country\",\"label\"]"
       ],
       "metadata": {
         "id": "ERfjA111C1QZ"
@@ -92,7 +82,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Task 2- Which 2 columns do not explain the type of information it is storing ? Can you delete this 2 columns"
+        "Task 2 - Which two columns do not explain the type of information they are storing? Can you delete these two columns?\n",
+        "\n",
+        "(Note: Make sure to identify and specify the columns that do not explain the type of information they are storing before deleting them.)"
       ],
       "metadata": {
         "id": "qSuxX1bRDgDR"
@@ -121,7 +113,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Task 3 - Add the code to change all \"?\"\" to NaN . In my answer, I used numpy.NaN"
+        "#Task 3 - Add the code to change all \"?\"\" to NaN . In my answer, I used numpy.NaN for this"
       ],
       "metadata": {
         "id": "kf0gjTslH00W"
@@ -141,7 +133,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# print all the columns with the total number of null values"
+        "# print all the columns and the total number of null values for each column"
       ],
       "metadata": {
         "id": "SltqSKX-a6ct"
@@ -173,7 +165,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Exploring the data"
+        "*Importantly, there are several strategies that could be used to address this missing data. Before making a decision, I need to understand the significance of the missing records and the feature itself.*"
+      ],
+      "metadata": {
+        "id": "lj-hpdxtGaex"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exploring the data**"
       ],
       "metadata": {
         "id": "bYRyybF8bgEh"
@@ -182,13 +183,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Task 5 - using the native-country column, where we could potentially drop the null value records and ...\n",
+        "Task 5 - Using the native-country column, where we could potentially drop the null value records and ...\n",
         "\n",
-        "Create a graph that shows the different values within that column and the value count for each value.\n",
-        "\n",
-        "**or **\n",
-        "\n",
-        "Show the percentage of each of the different values within that column"
+        "    1) Create a graph that shows the different values within that column and the value count for each value.\n",
+        "    or\n",
+        "    2) Show the percentage of each of the different values within that column."
       ],
       "metadata": {
         "id": "WQwGa6wccLtt"
@@ -210,9 +209,11 @@
       "source": [
         "\n",
         "\n",
-        "From the information above, we can see that 1 variance of this feature has over 91% of the data. A decision was made to change all missing data from the Native Country column to equal \"United States\".\n",
+        "From the information above, we can see that 1 unique value of this feature has over 91% of the data. Therefore, a decision was made to change all missing data from the Native Country column to equal \"United States\".\n",
         "\n",
-        "Additional, the majority of the other variances had such a low number of records that a decision was made to try and combine the countries together in a way that could add to the model. The decision was to use the information from the website :\n",
+        "***Importantly, this was not the only handling strategy that could have been used. I could have tried to explore the correlation between country and salary to determine if I could have removed this feature completely or created a ML classification to predict the most likely country based on the other features. ***\n",
+        "\n",
+        "Additional, the majority of the other unique values had such a low number of records, resulting in a high cardinality for those records. The decision was made to try and combine the countries together in a way that could add to the model. The decision was to use the information from the website :\n",
         "\n",
         "https://www.nationsonline.org/oneworld/GNI_PPP_of_countries.htm\n",
         "\n",
@@ -227,7 +228,9 @@
         "medium_PPP = [\" Trinadad&Tobago\",\" Poland\" ,\" Mexico\" , \" Thailand\",\" Iran\",\" Columbia\", \" Peru\", \" Philippines\" ,\" China\",\" Ecuador\" ,\n",
         "         \" Cuba\",\" El-Salvador\",\" Jamaica\",\" South\"]\n",
         "\n",
-        "high_PPP = [\" Holand-Netherlands\",\" Scotland\",\" Ireland\",\" Hong\",\" Beligum\" ,\" Japan\",\" Italy\",\" England\",\" Germany\",\" Canada\",\" France\",\" Taiwan\",\" Greece\",\" Portugal\" , \" Hungary\",\" Outlying-US(Guam-USVI-etc)\", \" Puerto-Rico\", \" Dominican-Republic\"]\n"
+        "high_PPP = [\" Holand-Netherlands\",\" Scotland\",\" Ireland\",\" Hong\",\" Beligum\" ,\" Japan\",\" Italy\",\" England\",\" Germany\",\" Canada\",\" France\",\" Taiwan\",\" Greece\",\" Portugal\" , \" Hungary\",\" Outlying-US(Guam-USVI-etc)\", \" Puerto-Rico\", \" Dominican-Republic\"]\n",
+        "\n",
+        "***Importantly, this was not the only handling strategy that could have been used. I could have keep the data as it was and evaluated the different models to select the most suitable one.***"
       ],
       "metadata": {
         "id": "66Ah1pVXyQDE"
@@ -247,7 +250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The next step was to look at the working class data and how the data is distributed.\n",
+        "The next step was to look at the working class data and how the data is distributed among the unique values. Does it have high cardinality ?\n",
         "\n",
         "Task 7 - Create a graph that shows the value count from the WorkClass column"
       ],
@@ -306,7 +309,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "An examination of the last column, Occupation, show now occur.\n",
+        "An examination of the last column, Occupation, should now happen.\n",
         "\n",
         "Task 9 - Present a graph that shows the value count for the \"Occupation\" column."
       ],
@@ -332,6 +335,8 @@
         "\n",
         "The results of that examination showed that 1843 would still be lost. After creating a model using KNNclasifer, the model came to only a 33% chance of guessing the correct label. Additionally, due to the size of the remaining sample,it was deemed acceptable to lose this number of records.\n",
         "\n",
+        "***Here I tried to created a ML classification to predict the most likely country based on the other features. I could have continue with this but 33% acc is very low ***\n",
+        "\n",
         "Task 10 - Drop the remaining NaN values"
       ],
       "metadata": {
@@ -354,9 +359,7 @@
       "source": [
         "\n",
         "\n",
-        "Once all the missing data was either replaced or deleted. The other columns were examined to see if the varience in each columns could be reduced.\n",
-        "\n",
-        "To get a better idea if certain data categories could be combined an examine on the bias of dataframe was conducted.\n",
+        "Once all the missing data was either replaced or deleted. The other columns were examined to see if the varience in each columns could be reduced.To get a better idea if certain unqiue values could be combined, an examination on the cardinality of the features was conducted\n",
         "\n",
         "Task 11 - Show the number of records that are above and below 50,000"
       ],
@@ -426,7 +429,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Normalising the data **\n",
+        "Encoding the data\n",
         "\n",
         "The data has been cleaned and combined to make it more effective in the modeling process.However, currently there are still a number of columns that have an unsuitable datatype for some of the machine learning algorithms that I will be using.\n",
         "\n",
@@ -514,9 +517,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Scaling the Data**"
+      ],
+      "metadata": {
+        "id": "scWhJTY-imzd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
-        "The features then had to be normalised as the differences between some of the values were so great that it could affect the accuracy of the models.\n",
+        "The features were then scaled due to the differences between distributions of the features.\n",
+        "\n",
+        "*Importantly, I should really prove this by showing the distributions of the different features and discussing how it would impact the different ML models*\n",
         "\n",
         "The MinMaxScaler was used to transforms the data.\n"
       ],
@@ -711,7 +725,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see, apart from Naive Bayes, all the other machine learning algorithms are above 80% with the Random Forest and the Neural Network Classifier slightly edging it at >84 % accuracy. With so many algorithms having a similar accuracy rating, further investigation will be undertaken by looking at the confusion matrix. This will establish where the errors occurred."
+        "As we can see, apart from Naive Bayes, all the other machine learning algorithms are above 80% with the Random Forest and the Neural Network Classifier slightly edging it at >84 % accuracy. With so many algorithms having a similar accuracy rating, further investigation will be undertaken by looking at the confusion matrix. This will establish where the errors occurred.\n",
+        "\n",
+        "Have a look at the completed answer tutorial to see how the additional analysis was conducted. In addition, you are welcome to have a look at how I pickled the model and then used in another programming."
       ],
       "metadata": {
         "id": "6tfbMkIGORTk"
