--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvceiGlkusjgzX1yI8bJnm",
+      "authorship_tag": "ABX9TyNO6+iQtCLEjCwSsq97z5Pj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,7 +183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Task 5 - Using the native-country column, where we could potentially drop the null value records and ...\n",
+        "Task 6 - Using the native-country column, where we could potentially drop the null value records and ...\n",
         "\n",
         "    1) Create a graph that shows the different values within that column and the value count for each value.\n",
         "    or\n",
@@ -196,7 +196,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Complete task 5"
+        "# Complete task 6"
       ],
       "metadata": {
         "id": "Ah4aE8hux7sr"
@@ -219,7 +219,7 @@
         "\n",
         "to split the countries into high_PPP ,medium_PPP and low_PPP.\n",
         "\n",
-        "Task 6 - Replace all of np.NaN with United-States and loop round each of the arrays to replace based on high_PPP ,medium_PPP and low_PPP\n",
+        "Task 7 - Replace all of np.NaN with United-States and loop round each of the arrays to replace based on high_PPP ,medium_PPP and low_PPP\n",
         "\n",
         "low_PPP = [\" Honduras\", \" Vietnam\",\" Cambodia\",\" Laos\",\" Haiti\",\n",
         "               \" Yugoslavia\",\" India\",\" Guatemala\", \" Nicaragua\"]\n",
@@ -239,7 +239,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Complete task 6"
+        "#Complete task 7"
       ],
       "metadata": {
         "id": "KL-_Nc7bzxtc"
@@ -252,7 +252,7 @@
       "source": [
         "The next step was to look at the working class data and how the data is distributed among the unique values. Does it have high cardinality ?\n",
         "\n",
-        "Task 7 - Create a graph that shows the value count from the WorkClass column"
+        "Task 8 - Create a graph that shows the value count from the WorkClass column"
       ],
       "metadata": {
         "id": "28G9O21tz3SD"
@@ -261,7 +261,7 @@
     {
       "cell_type": "code",
       "source": [
-        " # Complete task 7"
+        " # Complete task 8"
       ],
       "metadata": {
         "id": "KjHru-PzzqK_"
@@ -287,7 +287,7 @@
         "\n",
         "For the self employed columns, although no additional data was found showing a difference between incorporated self employers and unincorporated self-employees. It was thought that a person would incorporate their company when it grows to a significant size and so there could be a significant difference between the 2 categories. This resulted in the 2 categories being left as they were.\n",
         "\n",
-        "Task 8 - Replace the NaN to private within the workclass column and combine the never-worked and without-pay to \"Umemployed\"\n",
+        "Task 9 - Replace the NaN to private within the workclass column and combine the never-worked and without-pay to \"Umemployed\"\n",
         "\n",
         "Display the new data in the same graph as task 7"
       ],
@@ -298,7 +298,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Code for task 8"
+        "# Code for task 9"
       ],
       "metadata": {
         "id": "CbTcL1h151En"
@@ -311,7 +311,7 @@
       "source": [
         "An examination of the last column, Occupation, should now happen.\n",
         "\n",
-        "Task 9 - Present a graph that shows the value count for the \"Occupation\" column."
+        "Task 10 - Present a graph that shows the value count for the \"Occupation\" column."
       ],
       "metadata": {
         "id": "7mlc0ZEK535n"
@@ -320,7 +320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Code for Task 9"
+        "#Code for Task 10"
       ],
       "metadata": {
         "id": "7EvUG6Cb6VDf"
@@ -335,9 +335,9 @@
         "\n",
         "The results of that examination showed that 1843 would still be lost. After creating a model using KNNclasifer, the model came to only a 33% chance of guessing the correct label. Additionally, due to the size of the remaining sample,it was deemed acceptable to lose this number of records.\n",
         "\n",
-        "***Here I tried to created a ML classification to predict the most likely country based on the other features. I could have continue with this but 33% acc is very low ***\n",
+        "***Here I tried to created a ML classification to predict the most likely country based on the other features. I could have continue with this but 33% acc is very ***\n",
         "\n",
-        "Task 10 - Drop the remaining NaN values"
+        "Task 11 - Drop the remaining NaN values"
       ],
       "metadata": {
         "id": "JOjuubis6Yr-"
@@ -346,7 +346,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Complete Task 10"
+        "# Complete Task 11"
       ],
       "metadata": {
         "id": "A6mQ1pm763za"
@@ -361,7 +361,7 @@
         "\n",
         "Once all the missing data was either replaced or deleted. The other columns were examined to see if the varience in each columns could be reduced.To get a better idea if certain unqiue values could be combined, an examination on the cardinality of the features was conducted\n",
         "\n",
-        "Task 11 - Show the number of records that are above and below 50,000"
+        "Task 12 - Show the number of records that are above and below 50,000"
       ],
       "metadata": {
         "id": "tvO12Ur96-TL"
@@ -370,7 +370,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Complete task 11"
+        "# Complete task 12"
       ],
       "metadata": {
         "id": "JpaFi7aH7Ruy"
@@ -383,7 +383,7 @@
       "source": [
         "Using this information, a graph was created from the education column that showed the distribution of the data in each of the eductional categories.\n",
         "\n",
-        "Task 12 - Create a graph that shows each of the education values and the number of individuals for over and under 50,000"
+        "Task 13 - Create a graph that shows each of the education values and the number of individuals for over and under 50,000"
       ],
       "metadata": {
         "id": "SH4y1ULR7Xvq"
@@ -392,7 +392,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Complete task 12"
+        "# Complete task 13"
       ],
       "metadata": {
         "id": "PqKyzyqvDFNb"
@@ -405,7 +405,7 @@
       "source": [
         "A decision was made to combine all categories that were below the High School graduate. As the belief was that anyone who dropped out of highschool wouldn't be using their acdamic ability to aid them in their career.\n",
         "\n",
-        "Task 13 - replace the following values\n",
+        "Task 14 - replace the following values\n",
         "\n",
         "[\" 11th\",\" 10th\",\" 7th-8th\",\" 9th\",\" 12th\",\" 5th-6th\",\" 1st-4th\",\" Preschool\"]\n",
         "\n",
@@ -418,7 +418,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Complete Task 13"
+        "# Complete Task 14"
       ],
       "metadata": {
         "id": "Pm09DvvT7JEQ"
@@ -542,11 +542,9 @@
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "from sklearn.externals import joblib\n",
         "\n",
         "scaler = MinMaxScaler()\n",
         "scaler.fit(features)\n",
-        "joblib.dump(scaler, 'MinMaxScaler.pkl')\n",
         "scaled_df = scaler.transform(features)"
       ],
       "metadata": {
